kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: nspeerstra/portfolio-django:1.6.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: media-storage
          mountPath: /app/media
        - name: db-storage
          mountPath: /app/db
  volumes:
    - name: media-storage
      persistentVolumeClaim:
        claimName: media-pvc
    - name: db-storage
      persistentVolumeClaim:
        claimName: db-pvc
